// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeViewMenu should render search box 1`] = `
<Fragment>
  <InputGroup
    tag="div"
  >
    <InputGroupAddon
      addonType="prepend"
      tag="div"
    >
      Search
    </InputGroupAddon>
    <Input
      onChange={[Function]}
      type="text"
    />
  </InputGroup>
  <ListGroup
    tag="ul"
  >
    <ListGroupItem
      active={false}
      hasSubItems={true}
      isOpen=""
      key="releasenotes"
      onClick={[Function]}
    >
      Release Notes
    </ListGroupItem>
    <ListGroupItem
      active={false}
      hasSubItems={false}
      isOpen={false}
      key="atd"
      onClick={[Function]}
    >
      ATS Guide
    </ListGroupItem>
  </ListGroup>
</Fragment>
`;

exports[`TreeViewMenu should render the roots only 1`] = `
<Fragment>
  <ListGroup
    tag="ul"
  >
    <ListGroupItem
      active={false}
      hasSubItems={true}
      isOpen=""
      key="releasenotes"
      onClick={[Function]}
    >
      Release Notes
    </ListGroupItem>
    <ListGroupItem
      active={false}
      hasSubItems={false}
      isOpen={false}
      key="atd"
      onClick={[Function]}
    >
      ATS Guide
    </ListGroupItem>
  </ListGroup>
</Fragment>
`;
